DBJR-90: fix sidebar navigation spacing

--- a/assets/front/less/components/navigation/nav-stacked.less
+++ b/assets/front/less/components/navigation/nav-stacked.less
@@ -2,8 +2,6 @@
 
 
 .nav-stacked {
-    margin-bottom: 2 * @line-height-computed;
-
     > li > a {
         font-family: @font-family-condensed;
         font-size: @font-size-large;
